2000-05-09  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* configure.in: bumped version to 1.1.3. released a new tarball
	to go with GNOME 1.1.90.
	* src/main.c (main): #if 0ed out the icons setting call.

2000-05-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/preferences.c (create_prefs_dialog): change font selection
	to a button with font name that brings up a font selection dialog.
	add possibility to select a separate font for the header.
	(get_font_label): create a label for the font button.
	(font_button_clicked): run a modal font selection dialog.
	* src/config.c: load & save the header font settings.
	* src/print.c (print_header): print with a special font.
	* src/ghex.h (struct _GHexPrintJobInfo): added d_font and h_font
	members.
	* po/*.po: made an update-po.
	* po/sl.po: updated.
	* po/ghex.pot: updated.
	* help/C/index.html: updated.

2000-05-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/main.c: set the default window icon.
	* src/preferences.c (create_prefs_dialog): add a font selector
	for printing.
	(set_prefs): set the printing font to the font selection.
	(apply_changes_cb): set the printing font.
	* src/config.c (load_configuration): load printing font settings.
	(save_configuration): save printing font settings.
	* src/print.c (print_document): get font width and height from the
	selected printing font (we pressume the user chose a monospaced
	font so we measure the width of the space character).
	(print_header): don't use a separate font for header. perhaps once
	when somebody implements its configuration as well.
	* src/ghex.h: added declarations of new setting variables.
	* ghex.desktop: Added Slovene entry.

2000-05-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/findreplace.c (goto_byte_cb): can now handle offsets
	in hex.

2000-04-12  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added nl & ro

2000-04-08  Jesus Bravo Alvarez  <jba@pobox.com>

	* ghex.desktop: Added Galician entry.