@@ -297,14 +297,14 @@ static void render_ac(GtkHex *gh) {
 		gtk_draw_box(GTK_WIDGET(gh)->style, gh->adisp->window,
 					 state, shadow,
 					 cx, cy, gh->char_width, gh->char_height - 1);
-		gtk_draw_string(GTK_WIDGET(gh)->style, gh->adisp->window,
-						state, cx, cy + gh->disp_font->ascent, c);
+		gdk_draw_text(gh->adisp->window, gh->disp_font, gh->adisp_gc,
+					  cx, cy + gh->disp_font->ascent, c, 1);
 	}
 }
 
 static void render_xc(GtkHex *gh) {
 	gint cx, cy, i;
-	static guchar c[3];
+	static guchar c[2];
 	GtkStateType state;
 	GtkShadowType shadow;
 
@@ -334,8 +334,8 @@ static void render_xc(GtkHex *gh) {
 		gtk_draw_box(GTK_WIDGET(gh)->style, gh->xdisp->window,
 					 state, shadow,
 					 cx, cy, gh->char_width, gh->char_height - 1);
-		gtk_draw_string(GTK_WIDGET(gh)->style, gh->xdisp->window,
-						state, cx, cy + gh->disp_font->ascent, &c[i]);
+		gdk_draw_text(gh->xdisp->window, gh->disp_font, gh->adisp_gc,
+					  cx, cy + gh->disp_font->ascent, &c[i], 1);
 	}
 }
 
