@@ -3,6 +3,7 @@
 	* configure.in: bumped version to 1.1.3. released a new tarball
 	to go with GNOME 1.1.90.
 	* src/main.c (main): #if 0ed out the icons setting call.
+	* src/gtkhex.c (render_ac, render_xc): use proper fonts.
 
 2000-05-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
